<resources>
    <string name="app_name">Apman</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_hint">Log In</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="username_hint">Username</string>
    <string name="welcome_phrase">Welcome!</string>
    <string name="Home">Home</string>
    <string name="Password_hint">Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up_acticity">Owner sign up</string>
    <string name="Fname_hint">First Name</string>
    <string name="Lname_hint">Last Name</string>
    <string name="phone_no_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_sigup_option">Pman</string>
    <string name="signup_owner_hint">Owner</string>
    <string name="signup_tenant_hint">Tenant</string>
    <string name="signup_phrase">Sign up as:</string>
    <string name="city_hint">City</string>
    <string name="title_activity_spinner_activity">spinner_activity</string>
    <string name="town_hint">Town</string>
    <string name="description_hint">Property Description</string>
    <string name="address_hint">Address</string>
    <string name="title_activity_tenant_signup_activity">Tenant Sign Up</string>
    <string name="tenant_houseno_hint">House Number/Unit Number</string>
    <string name="tenant_signup">Sign up</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="title_activity_tenant_main_activity">Tenant Home</string>
    <string name="title_activity_message_activity">message_activity</string>
    <string name="title_activity_map_activity">map_activity</string>
    <string name="activityy_property">Properties</string>
</resources>
