<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:verticalScrollbarPosition="defaultPosition"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/txt_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fname_hint"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="text"
        android:textColor="@color/material_brown_900"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/txt_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lname_hint"
        android:inputType="text"
        android:padding="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/material_brown_500"/>
    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no_hint"
        android:inputType="phone"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/material_brown_900"
        />
    <EditText
        android:id="@+id/txt_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:padding="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/material_brown_500"/>
    <EditText
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/address_hint"
        android:inputType="text"
        android:textColor="@color/material_brown_900"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="text"
        android:hint="@string/Password_hint"
        android:textColor="@color/material_brown_500"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="text"
        android:hint="@string/confirm_pass"
        android:textColor="@color/material_brown_900"/>
<Button
    android:id="@+id/btn_owner_reg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/sign_up"
    android:layout_margin="30dp"
    android:textColor="@color/material_brown_500"/>
</LinearLayout>