<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/txt_tenant_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/Fname_hint"
        android:textColor="@color/material_brown_500"
        android:layout_marginTop="40dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/txt_tenant_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/Lname_hint"
        android:inputType="text"
        android:textColor="@color/material_brown_900"
        />
    <EditText
        android:id="@+id/txt_tenant_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/email_hint"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/material_brown_500"
        />
    <EditText
        android:id="@+id/txt_tenant_phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/phone_no_hint"
        android:inputType="phone"
        android:textColor="@color/material_brown_900"
        />
    <EditText
        android:id="@+id/txt_tenant_houseno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/tenant_houseno_hint"
        android:inputType="number"
        android:textColor="@color/material_brown_500"
        />
    <EditText
        android:id="@+id/txt_pass_tenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textPassword"
        android:hint="@string/Password_hint"
        android:textColor="@color/material_brown_900"/>
    <EditText
        android:id="@+id/txt_confirm_pass_tenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:paddingRight="10dp"
        android:hint="@string/confirm_pass"
        android:textColor="@color/material_brown_500"/>
    <Button
        android:id="@+id/btn_tenant_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tenant_signup"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="30dp"
        android:textColor="@color/material_brown_900"/>





</LinearLayout>